# the-ray-tracer-challenge-rust

./: Cargo.toml  LICENSE.txt  README.md
src/: camera.rs  canvas.rs  color.rs  comps.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  pattern.rs  plane.rs  ppm.rs  ray.rs  shape.rs  sphere.rs  transform.rs  transformation.rs  tuple.rs  utils.rs  world.rs
